# vani-lingo

./: .gitignore  README.md  pyproject.toml
src/: main.py  setup.py
src/assets/hsk_data/: hsk1.json  hsk2.json  hsk3.json
src/audio/: audio_manager.py
src/components/: buttons.py  displays.py  inputs.py  popups.py  text.py
src/managers/: app.py  auth.py  lesson.py  menus.py  setup.py  tts.py
src/tests/: test_handler.py  tts_audio_test.py
src/utilities/: controls.py  file_management.py  keys.py  mixins.py  testers.py  values.py
